# ign

./: .gitignore  LICENSE  README.md  pyproject.toml
ign/: __main__.py  cli.py  gitignoreio_api.py
