# ----------------------------------------------------------------------------------------------------------------------
# PRIMARY SETTINGS
[tool.poetry]
name = "ign"
version = "3.2.0"
description = "Python command line client to download .gitignore templates from gitignore.io"
authors = [
    "Jesse Butcher <boweeb@gmail.com>",
    "Antriksh Yadav <antrikshy@gmail.com>",
]
license = "MIT"

keywords = ["git", "gitignore", "gitignore.io", "developer"]

homepage = "https://github.com/boweeb/ign"
repository = "git@github.com:boweeb/ign.git"
documentation = "file://./README.md"

classifiers = [
   "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
ign = "ign.cli:main"


# ----------------------------------------------------------------------------------------------------------------------
# DEPENDENCIES
[tool.poetry.dependencies]
python = "^3.9"
# click = "^7.1.2"            # CLI framework
# "ruamel.yaml" = "^0.16.10"  # YAML support
# click-aliases = "^1.0.1"    # Extends Click with command aliases
# colorama = "^0.4.3"         # ASCII color lib -- still needed?
# pyxdg = "^0.27.0"           # XDG standard paths
# tomlkit = "^0.7.0"          # TOML support
# rich = "^3.3.0"             # ASCII decorator
# alive-progress = "^1.6.1"   # Progress bars
# cerberus = "^1.3.2"         # Schema validation

[tool.poetry.dev-dependencies]
# ipython = "*"               # Alternative REPL
# bpython = "*"               # Alternative REPL
coverage = "*"              # Code coverage report
pytest = "*"                # Test suite framework
pytest-runner = "*"         # Test suite runner
pytest-cov = "*"            # Integrate coverage with tests
pytest-bdd = "*"            # Gherkin support for pytest
# pdoc3 = "*"                 # API documentation generator
tox = "*"                   # Test environment management
pylama = "*"                # Linting suite
# Sphinx = "*"                # Project documentation generator


# ----------------------------------------------------------------------------------------------------------------------
# TOOLS
[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
atomic = true
lines_after_imports = 2


# ----------------------------------------------------------------------------------------------------------------------
# FIN
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
